- Added Winged Helmet, Dragon Armor, Leaf Armor, Hide Armor, Woodland Armor, and all Elven Headgear. - No skillchecks were being made for and no reagents were being consumed for Magery spells when cast from the spellbook or macros. Fixed. - Old routines for checking if a spellbook contains certain spell no longer work. Fixed three such instances so far, need to look for more. - Added support for all the new mounts up to High Seas expansion.

--- a/099/config/servspecopt.cfg
+++ b/099/config/servspecopt.cfg
@@ -150,5 +150,5 @@ MaxPathFindRange=50
 # ethereal, you will have to set the mount piece to be color 0x4001 and then equip
 # it. And in order to do that, you will need an ItemColorMask of 0x4FFF.
 
-#ItemColorMask=0x4FFF
+ItemColorMask=0x4FFF
 # Uncomment this if you want ethereal mounts and do not use older clients.
