--- a/099/pkg/combat/armor/itemdesc.cfg
+++ b/099/pkg/combat/armor/itemdesc.cfg
@@ -2049,7 +2049,7 @@ Armor 0x27D6
 ///////////////////
 //  PLATE
 ///////////////////
- 
+
 Armor 0x27C8
 {
 	Name			PlateDo
@@ -2209,6 +2209,555 @@ Armor 0x27C0
 	blockcircle	3
 	strrequired	90
 	DexPenalty	4
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+/////////////////////////
+// Misc new armor
+//
+// Winged helmet: 0x2689 - 0x268a
+// Dragon armor: 0x2641 - 0x2648, 0x2657 - 0x2658
+// 
+
+///////////////////
+//  HELMET
+///////////////////
+
+Armor 0x2689
+{ 
+	Name			WingedHelmet
+	AR			25
+	Coverage		Head
+	VendorSellsFor	250
+	VendorBuysFor	100
+	MaxHP		240
+	blockcircle	3
+	strrequired	90
+	DexPenalty	2
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+
+///////////////////
+//  DRAGON
+///////////////////
+
+Armor 0x2641
+{
+	Name			DragonBreastplate
+	AR			25
+	Coverage		Body
+	VendorSellsFor	500
+	VendorBuysFor	150
+	MaxHP		240
+	blockcircle	1
+	strrequired	90
+	DexPenalty	6
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x2657
+{
+	Name			DragonSleeves
+	AR			25
+	Coverage		Arms
+	VendorSellsFor	300
+	VendorBuysFor	90
+	MaxHP		240
+	blockcircle	1
+	strrequired	87
+	DexPenalty	3
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x2647
+{
+	Name			DragonLeggings
+	AR			25
+	Coverage		Legs/feet
+	VendorSellsFor	400
+	VendorBuysFor	120
+	MaxHP		240
+	blockcircle	1
+	strrequired	90
+	DexPenalty	5
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x2643
+{
+	Name			DragonGloves
+	AR			25
+	Coverage		Hands
+	VendorSellsFor	220
+	VendorBuysFor	70
+	MaxHP		240
+	blockcircle	1
+	strrequired	85
+	DexPenalty	2
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x2645
+{ 
+	Name			DragonHelm
+	AR			25
+	Coverage		Head
+	VendorSellsFor	250
+	VendorBuysFor	100
+	MaxHP		240
+	blockcircle	3
+	strrequired	90
+	DexPenalty	2
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+
+
+/////////////////////////
+// Elven armor:
+//
+// Woodland: 0x2b67 - 0x2b6d
+// Circlets and helmets: 0x2b6e - 0x2b73
+// Glasses: 0x2fb8
+// Hide: 0x2b74 - 0x2b79
+// Leaf: 0x2fc5 - 0x2fcb
+////////////////////////////
+
+///////////////////
+// LEAF
+///////////////////
+
+Armor 0x2fC7
+{
+	Name			LeafGorget
+	Desc			a leaf gorget
+	AR			12
+	Coverage		Neck
+	VendorSellsFor	36
+	VendorBuysFor	10
+	MaxHP		104
+	blockcircle	7
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x2fc8
+{
+	Name			LeafArms
+	Desc			leaf arms
+	AR			12
+	Coverage		Arms
+	VendorSellsFor	72
+	VendorBuysFor	24
+	MaxHP		104
+	blockcircle	7
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+
+Armor 0x2fc6
+{
+	Name			LeafGloves
+	Desc			leaf gloves
+	AR			12
+	Coverage		Hands
+	VendorSellsFor	36
+	VendorBuysFor	12
+	MaxHP		104
+	blockcircle	7
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+
+Armor 0x2fc9
+{
+	Name			LeafLeggings
+	Desc			leaf leggings
+	AR			12
+	Coverage		Legs/feet
+	VendorSellsFor	120
+	VendorBuysFor	40
+	MaxHP		104
+	blockcircle	7
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x2fc5
+{
+	Name			LeafTunic
+	Desc			a leaf tunic
+	AR			12
+	Coverage		Body
+	VendorSellsFor	120
+	VendorBuysFor	40
+	MaxHP		104
+	blockcircle	7
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x2fcb
+{
+	Name			FemaleLeafTunic
+	Desc			a female leaf tunic
+	AR			12
+	Coverage		Body
+	VendorSellsFor	120
+	VendorBuysFor	40
+	MaxHP		104
+	blockcircle	7
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x2fca
+{
+	Name			LeafTonlet
+	Desc			a leaf tonlet
+	AR			12
+	Coverage		Legs/feet
+	VendorSellsFor	120
+	VendorBuysFor	40
+	MaxHP		104
+	blockcircle	7
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+///////////////////
+//  HIDE
+///////////////////
+
+Armor 0x2b76
+{
+	Name			HideGorget
+	Desc			hide gorget
+	AR			17
+	Coverage		Neck
+	VendorSellsFor	120
+	VendorBuysFor	40
+	MaxHP		170
+	blockcircle	2
+	strrequired	65
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x2b74
+{
+	Name			HideTunic
+	Desc			a hide tunic
+	AR			17
+	Coverage		Body
+	VendorSellsFor	240
+	VendorBuysFor	80
+	MaxHP		160
+	blockcircle	3
+	strrequired	70
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x2b79
+{
+	Name			FemaleHideTunic
+	Desc			a female hide tunic
+	AR			17
+	Coverage		Body
+	VendorSellsFor	240
+	VendorBuysFor	80
+	MaxHP		160
+	blockcircle	3
+	strrequired	70
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x2b77
+{
+	Name			HidePauldrons
+	Desc			hide pauldrons
+	AR			17
+	Coverage		Arms
+	VendorSellsFor	180
+	VendorBuysFor	60
+	MaxHP		160
+	blockcircle	3
+	strrequired	65
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x2b78
+{
+	Name			HideLeggings
+	Desc			hide leggings
+	AR			17
+	Coverage		Legs/feet
+	VendorSellsFor	220
+	VendorBuysFor	70
+	MaxHP		160
+	blockcircle	3
+	strrequired	70
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x2b75
+{
+	Name			HideGloves
+	Desc			hide gloves
+	AR			17
+	Coverage		Hands
+	VendorSellsFor	120
+	VendorBuysFor	40
+	MaxHP		160
+	blockcircle	3
+	strrequired	63
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+
+///////////////////
+//  WOODLAND
+///////////////////
+
+Armor 0x2b6d
+{
+	Name			FemaleWoodlandChest
+	Desc			a female woodland chest
+	AR			25
+	Coverage		Body
+	VendorSellsFor	500
+	VendorBuysFor	150
+	MaxHP		240
+	blockcircle	1
+	strrequired	90
+	DexPenalty	6
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x2b67
+{
+	Name			WoodlandChest
+	Desc			a woodland chest
+	AR			25
+	Coverage		Body
+	VendorSellsFor	500
+	VendorBuysFor	150
+	MaxHP		240
+	blockcircle	1
+	strrequired	90
+	DexPenalty	6
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x2b6c
+{
+	Name			WoodlandArms
+	Desc			woodland arms
+	AR			25
+	Coverage		Arms
+	VendorSellsFor	300
+	VendorBuysFor	90
+	MaxHP		240
+	blockcircle	1
+	strrequired	87
+	DexPenalty	3
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x2b6b
+{
+	Name			WoodlandLeggings
+	Desc			woodland leggings
+	AR			25
+	Coverage		Legs/feet
+	VendorSellsFor	400
+	VendorBuysFor	120
+	MaxHP		240
+	blockcircle	1
+	strrequired	90
+	DexPenalty	5
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x2b6a
+{
+	Name			WoodlandGauntlets
+	Desc			woodland gauntlets
+	AR			25
+	Coverage		Hands
+	VendorSellsFor	220
+	VendorBuysFor	70
+	MaxHP		240
+	blockcircle	1
+	strrequired	85
+	DexPenalty	2
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x2b69
+{
+	Name			WoodlandGorget
+	Desc			a woodland gorget
+	AR			25
+	Coverage		Neck
+	VendorSellsFor	220
+	VendorBuysFor	70
+	MaxHP		240
+	blockcircle	1
+	strrequired	83
+	DexPenalty	2
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+
+
+
+///////////////////
+//  ELVEN HELMS
+///////////////////
+
+Armor 0x2b6e
+{
+	Name			Circlet
+	AR			15
+	Coverage		Head
+	MaxHP		90
+	blockcircle	7
+	VendorSellsFor	30
+	VendorBuysFor	10
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+ 
+Armor 0x2b6f
+{
+	Name			RoyalCirclet
+	AR			15
+	Coverage		Head
+	MaxHP		90
+	blockcircle	7
+	VendorSellsFor	30
+	VendorBuysFor	10
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x2b70
+{
+	Name			GemmedCirclet
+	AR			15
+	Coverage		Head
+	MaxHP		90
+	blockcircle	7
+	VendorSellsFor	30
+	VendorBuysFor	10
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x2b71
+{
+	Name			RavenHelm
+	AR			20
+	Coverage		Head
+	VendorSellsFor	225
+	VendorBuysFor	80
+	MaxHP		184
+	blockcircle	3
+	strrequired	70
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x2b72
+{
+	Name			VultureHelm
+	AR			20
+	Coverage		Head
+	VendorSellsFor	225
+	VendorBuysFor	80
+	MaxHP		184
+	blockcircle	3
+	strrequired	70
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x2b73
+{
+	Name			WingedHelm
+	AR			20
+	Coverage		Head
+	VendorSellsFor	225
+	VendorBuysFor	80
+	MaxHP		184
+	blockcircle	3
+	strrequired	70
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x2fb8
+{
+	Name			ElvenGlasses
+	AR			12
+	Coverage		Head
+	VendorSellsFor	48
+	VendorBuysFor	16
+	MaxHP		104
+	blockcircle	7
 	script		:combat:equipitem
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
