- Added the elven equipment - Added the gargoyle equipment - Fixed some errors related to placement of houses and boats in different realms

--- a/099/config/boats.cfg
+++ b/099/config/boats.cfg
@@ -336,10 +336,159 @@ Boat
 }
 
 #######################################################
-###       Britannian Ship  - 0x11040 to 0x11043       ###
+###          Orc Ship - 0x11018 to 0x1101b          ###
 #######################################################
 
-# Britannian Ship Facing East
+
+Boat
+{
+    ObjType                     0x11018
+    TillerMan                   0x79a5  0 7
+    PortGangplankExtended       0x3e84 -1 2
+    PortGangplankRetracted      0x3e85 -1 2
+    StarboardGangplankExtended  0x3e89 -1 -2
+    StarboardGangplankRetracted 0x3e8a -1 -2
+    Hold                        0x5c2d  0 9
+}
+
+Boat
+{
+    ObjType                     0x11019
+    TillerMan                   0x7b9a -7 0
+    PortGangplankExtended       0x3e84 -1 2
+    PortGangplankRetracted      0x3e85 -1 2
+    StarboardGangplankExtended  0x3e89 -1 -2
+    StarboardGangplankRetracted 0x3e8a -1 -2
+    Hold                        0x5bf7 -9 0
+}
+
+Boat
+{
+    ObjType                     0x1101a
+    TillerMan                   0x75bd  0 -7
+    PortGangplankExtended       0x3e84 -1 2
+    PortGangplankRetracted      0x3e85 -1 2
+    StarboardGangplankExtended  0x3e89 -1 -2
+    StarboardGangplankRetracted 0x3e8a -1 -2
+    Hold                        0x5c63  0 -9
+}
+
+Boat
+{
+    ObjType                     0x1101b
+    TillerMan                   0x77b1  7 0
+    PortGangplankExtended       0x3e84 -1 2
+    PortGangplankRetracted      0x3e85 -1 2
+    StarboardGangplankExtended  0x3e89 -1 -2
+    StarboardGangplankRetracted 0x3e8a -1 -2
+    Hold                        0x5c99  9 0
+}
+
+#######################################################
+###       Gargoyle Ship  - 0x11024 to 0x11027       ###
+#######################################################
+
+
+Boat
+{
+    ObjType                     0x11024
+    TillerMan                   0x85a0  0 2
+    PortGangplankExtended       0x3e84 -1 2
+    PortGangplankRetracted      0x3e85 -1 2
+    StarboardGangplankExtended  0x3e89 -1 -2
+    StarboardGangplankRetracted 0x3e8a -1 -2
+    Hold                        0x5c2d  0 9
+}
+
+Boat
+{
+    ObjType                     0x11025
+    TillerMan                   0x86ce -2 0
+    PortGangplankExtended       0x3e84 -1 2
+    PortGangplankRetracted      0x3e85 -1 2
+    StarboardGangplankExtended  0x3e89 -1 -2
+    StarboardGangplankRetracted 0x3e8a -1 -2
+    Hold                        0x5bf7 -9 0
+}
+
+Boat
+{
+    ObjType                     0x11026
+    TillerMan                   0x8344  0 -2
+    PortGangplankExtended       0x3e84 -1 2
+    PortGangplankRetracted      0x3e85 -1 2
+    StarboardGangplankExtended  0x3e89 -1 -2
+    StarboardGangplankRetracted 0x3e8a -1 -2
+    Hold                        0x5c63  0 -9
+}
+
+Boat
+{
+    ObjType                     0x11027
+    TillerMan                   0x8472  2 0
+    PortGangplankExtended       0x3e84 -1 2
+    PortGangplankRetracted      0x3e85 -1 2
+    StarboardGangplankExtended  0x3e89 -1 -2
+    StarboardGangplankRetracted 0x3e8a -1 -2
+    Hold                        0x5c99  9 0
+}
+
+#######################################################
+###        Tokuno Ship  - 0x11030 to 0x11033        ###
+#######################################################
+
+
+Boat
+{
+    ObjType                     0x11030
+    TillerMan                   0x9316  0 7
+    PortGangplankExtended       0x3e84 -1 2
+    PortGangplankRetracted      0x3e85 -1 2
+    StarboardGangplankExtended  0x3e89 -1 -2
+    StarboardGangplankRetracted 0x3e8a -1 -2
+    Hold                        0x5c2d  0 9
+}
+
+Boat
+{
+    ObjType                     0x11031
+    TillerMan                   0x9318 -7 0
+    PortGangplankExtended       0x3e84 -1 2
+    PortGangplankRetracted      0x3e85 -1 2
+    StarboardGangplankExtended  0x3e89 -1 -2
+    StarboardGangplankRetracted 0x3e8a -1 -2
+    Hold                        0x5bf7 -9 0
+}
+
+Boat
+{
+    ObjType                     0x11032
+    TillerMan                   0x9312  0 -7
+    PortGangplankExtended       0x3e84 -1 2
+    PortGangplankRetracted      0x3e85 -1 2
+    StarboardGangplankExtended  0x3e89 -1 -2
+    StarboardGangplankRetracted 0x3e8a -1 -2
+    Hold                        0x5c63  0 -9
+}
+
+Boat
+{
+    ObjType                     0x11033
+    TillerMan                   0x9314  7 0
+    PortGangplankExtended       0x3e84 -1 2
+    PortGangplankRetracted      0x3e85 -1 2
+    StarboardGangplankExtended  0x3e89 -1 -2
+    StarboardGangplankRetracted 0x3e8a -1 -2
+    Hold                        0x5c99  9 0
+}
+
+
+
+#######################################################
+###      Britannian Ship  - 0x11040 to 0x11043      ###
+#######################################################
+
+
 Boat
 {
     ObjType                     0x11040
