--- a/099/config/servspecopt.cfg
+++ b/099/config/servspecopt.cfg
@@ -152,3 +152,5 @@ MaxPathFindRange=50
 
 ItemColorMask=0x4FFF
 # Uncomment this if you want ethereal mounts and do not use older clients.
+
+UseWinLFH=1
