--- a/trunk/099/config/itemdesc.cfg
+++ b/trunk/099/config/itemdesc.cfg
@@ -643,6 +643,7 @@ Item 0x6203
 #   CProp DestX     i0
 #   CProp DestY     i0
 #   CProp DestZ     i0
+#   CProp DestR     i0
 }
 
 //These are the gates used in the gate spell
