--- a/trunk/099/pkg/items/boat/itemdesc.cfg
+++ b/trunk/099/pkg/items/boat/itemdesc.cfg
@@ -8,7 +8,6 @@ Item 0x16027
     VendorSellsFor 25000
     VendorBuysFor 25000
 	newbie 1
-	OldObjType 0x6027
 }
 Item 0x16028
 {
@@ -20,7 +19,6 @@ Item 0x16028
     VendorSellsFor 35000
     VendorBuysFor 35000
 	newbie 1
-	OldObjType 0x6028
 }
 
 
@@ -34,7 +32,6 @@ Item 0x16029
     VendorSellsFor 50000
     VendorBuysFor 50000
 	newbie 1
-	OldObjType 0x6029
 }
 Item 0x1602A
 {
@@ -46,7 +43,6 @@ Item 0x1602A
     VendorSellsFor 60000
     VendorBuysFor 60000
 	newbie 1
-	OldObjType 0x602a
 }
 
 
@@ -60,7 +56,6 @@ Item 0x1602B
     VendorSellsFor 80000
     VendorBuysFor 80000
 	newbie 1
-	OldObjType 0x602b
 }
 Item 0x1602C
 {
@@ -72,9 +67,41 @@ Item 0x1602C
     VendorSellsFor 90000
     VendorBuysFor 90000
 	newbie 1
-	OldObjType 0x602c
 }
 Item 0x1602D
+{
+    Name    orcshipdeed
+	Desc deed to an Orc ship
+    Graphic 0x14F2
+    Script  shipdeed
+    cprop   shiptype i69656
+    VendorSellsFor 90000
+    VendorBuysFor 90000
+	newbie 1
+}
+Item 0x1602E
+{
+    Name    gargoyleshipdeed
+	Desc deed to a Gargoyle ship
+    Graphic 0x14F2
+    Script  shipdeed
+    cprop   shiptype i69668
+    VendorSellsFor 90000
+    VendorBuysFor 90000
+	newbie 1
+}
+Item 0x1602F
+{
+    Name    tokunoshipdeed
+	Desc deed to a Tokuno ship
+    Graphic 0x14F2
+    Script  shipdeed
+    cprop   shiptype i69680
+    VendorSellsFor 90000
+    VendorBuysFor 90000
+	newbie 1
+}
+Item 0x16030
 {
     Name    britannianshipdeed
 	Desc deed to a Britannian ship
@@ -160,10 +187,6 @@ Boat 0x11000
 	OldObjtype	0x11001
 	OldObjtype	0x11002
 	OldObjtype	0x11003
-	OldObjtype	0x4000
-	OldObjtype	0x4001
-	OldObjtype	0x4002
-	OldObjtype	0x4003
 }
 
 Boat 0x11004
@@ -175,10 +198,6 @@ Boat 0x11004
 	OldObjtype	0x11005
 	OldObjtype	0x11006
 	OldObjtype	0x11007
-	OldObjtype	0x4004
-	OldObjtype	0x4005
-	OldObjtype	0x4006
-	OldObjtype	0x4007
 }
 
 Boat 0x11008
@@ -190,10 +209,6 @@ Boat 0x11008
 	OldObjtype	0x11009
 	OldObjtype	0x1100a
 	OldObjtype	0x1100b
-	OldObjtype	0x4008
-	OldObjtype	0x4009
-	OldObjtype	0x400a
-	OldObjtype	0x400b
 }
 
 Boat 0x1100c
@@ -205,10 +220,6 @@ Boat 0x1100c
 	OldObjtype	0x1100d
 	OldObjtype	0x1100e
 	OldObjtype	0x1100f
-	OldObjtype	0x400c
-	OldObjtype	0x400d
-	OldObjtype	0x400e
-	OldObjtype	0x400f
 }
 
 Boat 0x11010
@@ -220,10 +231,6 @@ Boat 0x11010
 	OldObjtype	0x11011
 	OldObjtype	0x11012
 	OldObjtype	0x11013
-	OldObjtype	0x4010
-	OldObjtype	0x4011
-	OldObjtype	0x4012
-	OldObjtype	0x4013
 }
 
 Boat 0x11014
@@ -235,20 +242,49 @@ Boat 0x11014
 	OldObjtype	0x11015
 	OldObjtype	0x11016
 	OldObjtype	0x11017
-	OldObjtype	0x4014
-	OldObjtype	0x4015
-	OldObjtype	0x4016
-	OldObjtype	0x4017
 }
 
-//Boat 0x11040
-//{
-//	Name			BritannianBoat
-//	Graphic		0x11040
-//	MultiID		0x0040
-//
-//	OldObjtype	0x11041
-//	OldObjtype	0x11042
-//	OldObjtype	0x11043
-//}
+Boat 0x11018
+{
+	Name			OrcShip
+	Graphic		0x11018
+	MultiID		0x0018
+
+	OldObjtype	0x11019
+	OldObjtype	0x1101a
+	OldObjtype	0x1101b
+}
+
+Boat 0x11024
+{
+	Name			GargoyleShip
+	Graphic		0x11024
+	MultiID		0x0024
+
+	OldObjtype	0x11025
+	OldObjtype	0x11026
+	OldObjtype	0x11027
+}
+
+Boat 0x11030
+{
+	Name			TokunoShip
+	Graphic		0x11030
+	MultiID		0x0030
+
+	OldObjtype	0x11031
+	OldObjtype	0x11032
+	OldObjtype	0x11033
+}
+
+Boat 0x11040
+{
+	Name			BritannianShip
+	Graphic		0x11040
+	MultiID		0x0040
+
+	OldObjtype	0x11041
+	OldObjtype	0x11042
+	OldObjtype	0x11043
+}
 
