Added all the new skills to the skill window, now we need to make them work, and think of a new name for AoSNecromancy, or just hide it

--- a/099/pkg/skills/skillmaster.cfg
+++ b/099/pkg/skills/skillmaster.cfg
@@ -401,3 +401,85 @@ skill 48
 	desc
 	tradeskill 1
 }
+
+skill 49
+{
+	name AOSNecromancy
+	script
+	desc AoSNecromancy
+	title Necromancer
+	tradeskill 0
+}
+
+skill 50
+{
+	name Focus
+	script
+	desc Focus
+	title Warrior
+	tradeskill 0
+}
+
+skill 51
+{
+	name Chivalry
+	script
+	desc Chivalry
+	title Paladin
+	tradeskill 0
+}
+
+skill 52
+{
+	name Bushido
+	script
+	desc Bushido
+	title Samurai
+	tradeskill 0
+}
+
+skill 53
+{
+	name Ninjitsu
+	script
+	desc Ninjitsu
+	title Ninja
+	tradeskill 0
+}
+
+skill 54
+{
+	name Spellweaving
+	script
+	desc Spellweaving
+	title Druid
+	tradeskill 0
+}
+
+skill 55
+{
+	name Throwing
+	script
+	desc Throwing
+	title Bladeweaver
+	tradeskill 0
+}
+
+skill 56
+{
+	name Imbuing
+	script :itemid:itemid
+	desc Imbuing
+	title Artificer
+	tradeskill 1
+}
+
+skill 57
+{
+	name Mysticism
+	script
+	desc Mysticism
+	title Mystic
+	tradeskill 0
+}
+
