- Made christmas items not to decay on server restart - Made the jack-o-lanterns decay on server restart - Increased the time before a player corpse decays - Christmas tree deeds appear in character backpack on login, only once per account

--- a/095/pkg/items/decorations/itemdesc.cfg
+++ b/095/pkg/items/decorations/itemdesc.cfg
@@ -723,7 +723,7 @@ Item  0xB010
 	Color		1425
 	script		christmastreedeed
 	weight		1
-	SaveOnExit	0
+//	SaveOnExit	0
 }
 
 Item  0xB011
@@ -732,7 +732,7 @@ Item  0xB011
 	Desc			Christmas tree
 	Graphic		0x0cd7
 	weight		200
-	SaveOnExit	0
+//	SaveOnExit	0
 }
 
 Item  0xB012
